fix seasonteam
